--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "mysql2": "^3.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   }
 }
