--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ containers-us-west-58.railway.app
 
 3306
 127.0.0.1
-
+echo fs.inotify.max_user_watches=582222 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
 Activation_TOKEN= reiu$)8dadf
 G_CLIENT_ID=655256902573-jtg4fq9c1m80u825a97urvpesifs6kud.apps.googleusercontent.com
 G_CLIENT_SECRET=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
